made rest of the page responsive

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
                     <!-- seat layout start -->
                     <div id="seat-layout-container" class="space-y-6 font-inter text-sm lg:text-lg font-medium">
-                        <div class="mt-6 flex justify-between">
+                        <div class="mt-6 flex justify-between gap-3 lg:gap-8">
                             <div></div>
                             <div></div>
                             <div></div>
@@ -260,81 +260,81 @@
                                 <img src="images/tabler-icon-steering-wheel.svg" alt="steering-wheel">
                             </div>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-4 py-4 lg:px-10 lg:py-4">A</p>
-                            <h2 id="A1" class="bg-[#0307121A] px-4 py-4 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A1</h2>
-                            <h2 id="A2" class="bg-[#0307121A] px-4 py-4 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A2</h2>
-                            <h2 id="A3" class="bg-[#0307121A] px-4 py-4 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A3</h2>
-                            <h2 id="A4" class="bg-[#0307121A] px-4 py-4 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">A</p>
+                            <h2 id="A1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A1</h2>
+                            <h2 id="A2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A2</h2>
+                            <h2 id="A3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A3</h2>
+                            <h2 id="A4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">A4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">B</p>
-                            <h2 id="B1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">B1</h2>
-                            <h2 id="B2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">B2</h2>
-                            <h2 id="B3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">B3</h2>
-                            <h2 id="B4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">B4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">B</p>
+                            <h2 id="B1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">B1</h2>
+                            <h2 id="B2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">B2</h2>
+                            <h2 id="B3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">B3</h2>
+                            <h2 id="B4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">B4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">C</p>
-                            <h2 id="C1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">C1</h2>
-                            <h2 id="C2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">C2</h2>
-                            <h2 id="C3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">C3</h2>
-                            <h2 id="C4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">C4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">C</p>
+                            <h2 id="C1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">C1</h2>
+                            <h2 id="C2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">C2</h2>
+                            <h2 id="C3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">C3</h2>
+                            <h2 id="C4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">C4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">D</p>
-                            <h2 id="D1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">D1</h2>
-                            <h2 id="D2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">D2</h2>
-                            <h2 id="D3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">D3</h2>
-                            <h2 id="D4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">D4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">D</p>
+                            <h2 id="D1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">D1</h2>
+                            <h2 id="D2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">D2</h2>
+                            <h2 id="D3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">D3</h2>
+                            <h2 id="D4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">D4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">E</p>
-                            <h2 id="E1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">E1</h2>
-                            <h2 id="E2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">E2</h2>
-                            <h2 id="E3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">E3</h2>
-                            <h2 id="E4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">E4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">E</p>
+                            <h2 id="E1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">E1</h2>
+                            <h2 id="E2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">E2</h2>
+                            <h2 id="E3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">E3</h2>
+                            <h2 id="E4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">E4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">F</p>
-                            <h2 id="F1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">F1</h2>
-                            <h2 id="F2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">F2</h2>
-                            <h2 id="F3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">F3</h2>
-                            <h2 id="F4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">F4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">F</p>
+                            <h2 id="F1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">F1</h2>
+                            <h2 id="F2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">F2</h2>
+                            <h2 id="F3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">F3</h2>
+                            <h2 id="F4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">F4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">G</p>
-                            <h2 id="G1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">G1</h2>
-                            <h2 id="G2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">G2</h2>
-                            <h2 id="G3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">G3</h2>
-                            <h2 id="G4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">G4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">G</p>
+                            <h2 id="G1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">G1</h2>
+                            <h2 id="G2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">G2</h2>
+                            <h2 id="G3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">G3</h2>
+                            <h2 id="G4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">G4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">H</p>
-                            <h2 id="H1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">H1</h2>
-                            <h2 id="H2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">H2</h2>
-                            <h2 id="H3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">H3</h2>
-                            <h2 id="H4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">H4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">H</p>
+                            <h2 id="H1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">H1</h2>
+                            <h2 id="H2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">H2</h2>
+                            <h2 id="H3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">H3</h2>
+                            <h2 id="H4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">H4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">I</p>
-                            <h2 id="I1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">I1</h2>
-                            <h2 id="I2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">I2</h2>
-                            <h2 id="I3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">I3</h2>
-                            <h2 id="I4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">I4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">I</p>
+                            <h2 id="I1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">I1</h2>
+                            <h2 id="I2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">I2</h2>
+                            <h2 id="I3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">I3</h2>
+                            <h2 id="I4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">I4</h2>
                         </div>
-                        <div class="flex lg:justify-between gap-1 lg:gap-8">
-                            <p class="px-10 py-4">J</p>
-                            <h2 id="J1" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">J1</h2>
-                            <h2 id="J2" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">J2</h2>
-                            <h2 id="J3" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">J3</h2>
-                            <h2 id="J4" class="bg-[#0307121A] px-10 py-4 rounded-xl cursor-pointer">J4</h2>
+                        <div class="flex justify-between gap-3 lg:gap-8">
+                            <p class="px-5 py-5 lg:px-10 lg:py-4">J</p>
+                            <h2 id="J1" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">J1</h2>
+                            <h2 id="J2" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">J2</h2>
+                            <h2 id="J3" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">J3</h2>
+                            <h2 id="J4" class="bg-[#0307121A] px-5 py-5 lg:px-10 lg:py-4 rounded-xl cursor-pointer">J4</h2>
                         </div>
                     </div>
                 </div>
 
                 <!-- ph-main right -->
-                <div class="pl-8 w-[40%] font-inter text-lg font-medium">
+                <div class="mt-10 lg:mt-0 lg:pl-8 w-full lg:w-[40%] font-inter text-lg font-medium">
                     <h3 class="text-2xl font-raleway font-semibold pb-6 mb-6 border-b border-dashed border-[#03071233]">
                         Select Your
                         Seat</h3>
@@ -395,9 +395,9 @@
                             <div class="modal-box w-11/12 max-w-5xl text-center py-14 px-20">
                                 <img class="mx-auto" src="images/success.png" alt="success-image">
                                 <h3 class="font-bold text-2xl font-roboto py-9 text-[#27AE60]">SUCCESS!</h3>
-                                <p class="text-[#4A4A4A] font-roboto text-xl font-medium">Thank you for Booking Our Bus
+                                <p class="text-[#4A4A4A] font-roboto text-base lg:text-xl font-medium mb-3">Thank you for Booking Our Bus
                                     Seats. We are working hard to find the best service and deals for you. </p>
-                                <p class="text-[#4A4A4A] font-roboto text-xl font-light mb-5">Shortly you will find a
+                                <p class="text-[#4A4A4A] font-roboto text-sm lg:text-xl font-light mb-5">Shortly you will find a
                                     confirmation in your email.</p>
                                 <div class="modal-action flex justify-center">
                                     <form method="dialog">
@@ -409,7 +409,7 @@
                         </dialog>
                     </div>
                     <div class="pt-6">
-                        <ul class="flex justify-center gap-11">
+                        <ul class="flex justify-center gap-8 lg:gap-11">
                             <li class="underline text-base font-normal text-[#03071299]"><a href="">Terms and
                                     Conditions</a></li>
                             <li class="underline text-base font-normal text-[#03071299]"><a href="">Cancellation
