--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/bus-icon.png">
+    <link rel="icon" type="image/x-icon" href="images/bus-icon.png">
     <title>P-Ticket</title>
     <!-- tailwind and daisyUI link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -361,6 +361,10 @@
                                 placeholder="Have any coupon?">
                             <button id="apply-btn"
                                 class="btn text-white text-sm bg-[#1DD100] rounded-r-3xl rounded-l-none -ml-2 w-1/3 btn-lg">Apply</button>
+                        </div>
+                        <div class="flex justify-between hidden">
+                            <h2>Discount</h2>
+                            <p>BDT <span id="discount-price">0</span></p>
                         </div>
                         <div class="flex justify-between">
                             <h2>Grand Total</h2>
