disable code area after 1 input, show alert for wrong code

--- a/index.html
+++ b/index.html
@@ -356,13 +356,13 @@
                             <h2>Total Price</h2>
                             <p>BDT <span id="total-price">0</span></p>
                         </div>
-                        <div class="mb-6">
+                        <div id="coupon-area" class="mb-6">
                             <input id="input-field" class="text-sm pl-5 rounded-l-3xl py-5 px-1 w-2/3" type="text"
-                                placeholder="Have any coupon?">
-                            <button id="apply-btn"
+                                placeholder="Have any coupon?"  >
+                            <button id="apply-btn" 
                                 class="btn text-white text-sm bg-[#1DD100] rounded-r-3xl rounded-l-none -ml-2 w-1/3 btn-lg">Apply</button>
                         </div>
-                        <div class="flex justify-between hidden">
+                        <div id="discount-div" class="flex justify-between hidden">
                             <h2>Discount</h2>
                             <p>BDT <span id="discount-price">0</span></p>
                         </div>
