--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                             <input id="input-field" class="text-sm pl-5 rounded-l-3xl py-5 px-1 w-2/3" type="text"
                                 placeholder="Have any coupon?">
                             <button id="apply-btn"
-                                class="btn text-white text-sm bg-[#1DD100] rounded-r-3xl rounded-l-none -ml-2 w-1/3 btn-lg" disabled>Apply</button>
+                                class="btn text-white text-sm bg-[#1DD100] rounded-r-3xl rounded-l-none -ml-2 w-1/3 btn-lg">Apply</button>
                         </div>
                         <div id="discount-div" class="flex justify-between hidden">
                             <h2>Discount</h2>
