--- a/index.html
+++ b/index.html
@@ -437,10 +437,10 @@
                                 <h3 class="font-bold text-2xl font-roboto py-9 text-[#27AE60]">SUCCESS!</h3>
                                 <p class="text-[#4A4A4A] font-roboto text-base lg:text-xl font-medium mb-3">Thank you
                                     for Booking Our Bus
-                                    Seats. We are working hard to find the best service and deals for you. </p>
-                                <p class="text-[#4A4A4A] font-roboto text-sm lg:text-xl font-light mb-5">Shortly you
-                                    will find a
-                                    confirmation in your email.</p>
+                                    Seats. We work hard to provide you the best deals & services. </p>
+                                <p class="text-[#4A4A4A] font-roboto text-sm lg:text-xl font-light mb-5">You
+                                    will get a
+                                    confirmation in your email & sms very soon.</p>
                                 <div class="modal-action flex justify-center">
                                     <form method="dialog">
                                         <button
